tests/fixtures/valid/import-global-constant.php
<?php

declare(strict_types=1);

namespace Valid;

use const PHP_VERSION;

$foo = PHP_VERSION;
