tests/fixtures/invalid/global-constant-fully-qualified.php
<?php

declare(strict_types=1);

namespace Invalid;

$foo = \PHP_VERSION;
